; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_zlib_rc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_zlib_rc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zlib = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"Z_OK\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"Z_STREAM_END\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"Z_NEED_DICT\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"Z_ERRNO\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"Z_STREAM_ERROR\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"Z_DATA_ERROR\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"Z_MEM_ERROR\00", align 1
@.str.7 = private unnamed_addr constant [12 x i8] c"Z_BUF_ERROR\00", align 1
@.str.8 = private unnamed_addr constant [16 x i8] c"Z_VERSION_ERROR\00", align 1
@.str.9 = private unnamed_addr constant [15 x i8] c"Z_*INVALID_RC*\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.zlib*)* @zlib_rc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @zlib_rc(%struct.zlib* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.zlib*, align 8
  store %struct.zlib* %0, %struct.zlib** %3, align 8
  %4 = load %struct.zlib*, %struct.zlib** %3, align 8
  %5 = getelementptr inbounds %struct.zlib, %struct.zlib* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 131, label %7
    i32 130, label %8
    i32 132, label %9
    i32 134, label %10
    i32 129, label %11
    i32 135, label %12
    i32 133, label %13
    i32 136, label %14
    i32 128, label %15
  ]

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %17

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %17

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %17

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %17

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %17

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %17

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %17

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %17

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %15, %14, %13, %12, %11, %10, %9, %8, %7
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
